# WinScreenCaptureLib

./: .gitignore  CMakeLists.txt  README.md
WSCL/: D3D9ScreenCapture.cpp  D3D9ScreenCapture.h  IScreenCapture.cpp  ScreenCapture.cpp  ScreenCapture.h  core.h
